--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
     <ol class="posts">
     {% for post in paginator.posts %}
       <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo;
-        <i><span>
+        <i><span class="time">
           {{ post.date | date: "%d" }}
           {% assign m = post.date | date: "%-m"  %}
           {% case m %}
