feat: Add tagline to homepage
- Included a descriptive subtitle for the Ideario section
- Enhances the landing page with a brief explanatory text

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: default
 
 <div id="home">
     <h1>Ideario :bulb: :green_book:</h1>
+    <p>Explorando ideas y compartiendo conocimientos.</p>
     <hr />
     <ul class="posts">
     {% for post in paginator.posts %}
